# stockvn

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
adr/: 0001-realtime-transport.md  0002-event-sourcing-event_log.md  0003-bronze-silver-gold.md  0004-determinism-and-hashing.md  0005-fail-safe-governance.md
configs/: corp_actions.yaml  cost_calibration.yaml  eval_lab.yaml  execution_model.yaml  fees_crypto.yaml  fees_taxes.yaml  market_rules_vn.yaml  raocmoe.yaml  research_gates.yaml  trading_calendar_vn.yaml
data_demo/: crypto_prices_demo_1d.csv  fundamentals_demo.csv  prices_demo_1d.csv  tickers_demo.csv  trades_demo.csv  vnindex_ohlcv_1d.csv
docs/: ARCHITECTURE_MAP.md  AUTOPILOT_STATUS.md  BACKTEST_V2_GUIDE.md  CORP_ACTIONS_GUIDE.md  CRYPTO_MODE_GUIDE.md  CRYPTO_REALTIME_PAPER_DEMO.md  EVAL_LAB_QA_NOTES.md  EVAL_LAB_STATUS.md  GLOSSARY_VI_EN.md  HOME_DASHBOARD_GUIDE.md  INCIDENT_PLAYBOOK.md  INTERACTIVE_CONSOLE_STATUS.md  KIOSK_GUIDE.md  LIVE_READINESS_GUIDE.md  NEXT_ACTIONS.md  QUANT_CORE_HARDENING.md  QUANT_TRUST_PACK.md  QUANT_VALIDATION_ADVANCED.md  RAOCMOE_STATUS.md  RAOCMOE_V1_GUIDE.md  RISK_OPTIMIZATION_GUIDE.md  SAFE_TRADING_GUIDE.md  SIMPLE_MODE_GUIDE.md  TCA_GUIDE.md  TEST_TRIAGE.md  UNIVERSE_SNAPSHOT_GUIDE.md  VN10_EODHD_BOOTSTRAP_AND_BACKTEST.md  alpha_v2_spec.md  main.tex  runbook.md  ssi_contract.md  ssi_field_mapping.md  ssi_pipeline_architecture.md
infra/: Dockerfile  docker-compose.yml
migrations/: env.py
models/: user_model.py
research/: __init__.py  evaluate_model_vn10.py
scripts/: __init__.py  alpha_v3_predict.py  alpha_v3_train.py  audit_dataset_prices.py  bootstrap_vn10_and_seed.py  bronze_cleanup.py  bronze_verify.py  demo_crypto_oms_realtime_exec.py  dev_reset_db.py  dev_seed_minimal.py  export_alpha_report.py  export_report.py  export_report_v3.py  fetch_eodhd_vn_universe10.py  generate_demo_data.py  import_trades.py  ingest_data_drop.py  (+22 more)
(+875 files in other folders)
