[project]
name = "vn-invest-toolkit"
version = "0.1.0"
requires-python = ">=3.11"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501", "B008", "F401", "E731", "SIM118", "UP017", "I001", "F841", "E402", "SIM108", "B009", "B905", "B904", "B007", "SIM112", "SIM105", "UP034", "UP035", "UP037", "F821", "F811", "E741"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "postgres: tests that require PostgreSQL service"
]
